// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate should generate a token 1`] = `
Object {
  "exp": 3600,
  "iat": 0,
  "iss": "maps.org.team.id",
  "origin": "org.team.id",
}
`;

exports[`generate should generate a token without ttl and origin 1`] = `
Object {
  "exp": 1800,
  "iat": 0,
  "iss": "maps.org.team.id",
}
`;
